UIMA-1560 Replaced new Long(value) with Long.valueOf(value)
git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/uimaj/trunk@812553 13f79535-47bb-0310-9956-ffa450edef68